Resolves: tdf#121641 properties invisible after 'reset'

Change-Id: Iedb2b11be0e008501273925d6ae7137b28c3b912